# deeponet-jax-inversion

./: .gitignore  README.md  pyproject.toml
modules/: simple_deeponet.py  simulators_tools_marcio.py  training_deeponet.py
notebook/: 2-deeponet_training.ipynb  3-inversion.ipynb
notebook/mass-spring/: 2-deeponet_training.ipynb  3-inversion.ipynb  4-emcee-mcmc.ipynb  5-numpyro-hmc.ipynb  6-chain-analysis.ipynb  7-pi-deeponet-training.ipynb  7-pi-deeponet.ipynb
notebook/permeability_fields/: 1-preparing-data.ipynb  2-inspecting-deeponet-training.ipynb  3-inverse-problem.ipynb
notebook/tests/: testing_optuna.ipynb
