[project]
name = "deeponet-jax-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.0",
    "h5py>=3.14.0",
    "jax[cuda12]>=0.6.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "optax>=0.2.5",
]
