[project]
name = "deeponet-jax-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz>=0.22.0",
    "corner>=2.2.3",
    "diffrax>=0.7.0",
    "emcee>=3.1.6",
    "h5py>=3.14.0",
    "jax[cuda12]>=0.6.1",
    "jupyter>=1.1.1",
    "mat73>=0.65",
    "matplotlib>=3.10.3",
    "numdifftools>=0.9.41",
    "numpy>=2.3.0",
    "numpyro>=0.19.0",
    "optax>=0.2.5",
    "optuna>=4.5.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]
